--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_margin="10dp"
             android:padding="10dp"
             app:gravity="center"
+            app:letterSpacing="0.1"
             app:textColor="@android:color/black"
             app:textSize="22sp"
             app:wordHorizontalMargin="10dp" />
